Add a post; Remove default authors; Translate elements

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,7 +75,7 @@ layout: default
 
     <div class="post__share">
       <div class="share__head">
-        <div class="share__title">Share this:</div>
+        <div class="share__title">Partagez:</div>
       </div>
       <ul class="share__list list-reset">
         <li class="share__item">
