Update some texts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -120,7 +120,7 @@ layout: default
     </div>
   
     <div class="card-author__content">
-      <div class="card-author__role">Written by</div>
+      <div class="card-author__role">Écrit par</div>
         {% if author %}
         <h3 class="card-author__name"><a href="{{ author.url }}" class="card-author__link">{{ author.name }}</a></h3>
         <p class="card-author__description">{{ author.content }}</p>
