--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,6 +52,7 @@
     }
     {% endif %}
   </script>
+  <script defer data-domain="pausegamer.com" src="https://plausible.io/js/script.js"></script>
 
   <style>
   {% capture include_to_scssify %}
