Hide the subscribe form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </main>
     <!-- end content -->
   
-    {% include subscribe.html %}
+    <!-- {% include subscribe.html %} -->
   
     {% include footer.html %}
 
