--- a/_includes/disqus-comments.html
+++ b/_includes/disqus-comments.html
@@ -1,6 +1,6 @@
 <!-- begin comments -->
 <div class="show-comments animate">
-  <button class="button button--big disqus-button" id="show-comments-button" onclick="disqus();return false;">Show Comments</button>
+  <button class="button button--big disqus-button" id="show-comments-button" onclick="disqus();return false;">Afficher les commentaires</button>
 </div>
 
 <div id="disqus_thread" class="post__comments">
