--- a/_sass/1-tools/_grid.scss
+++ b/_sass/1-tools/_grid.scss
@@ -1,7 +1,10 @@
+@use "sass:math";
+@use "../0-settings/variables";
+
 /* Grid */
 $columns: 12;
 $container-base-width: 1300px;
-$container-offset: $base-spacing-unit;
+$container-offset: variables.$base-spacing-unit;
 
 $wide: 1400px;
 $desktop: 1024px;
@@ -53,13 +56,13 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
   flex: 0 1 auto;
   flex-direction: row;
   box-sizing: border-box;
-  margin-left: ($base-spacing-unit * -1);
-  margin-right: ($base-spacing-unit * -1);
+  margin-left: (variables.$base-spacing-unit * -1);
+  margin-right: (variables.$base-spacing-unit * -1);
 }
 
 .col {
-  padding-left: $base-spacing-unit;
-  padding-right: $base-spacing-unit;
+  padding-left: variables.$base-spacing-unit;
+  padding-right: variables.$base-spacing-unit;
 }
 
 [class^="col-"] {
@@ -69,19 +72,19 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
 
 @for $i from 0 through $columns {
   .col-#{$i} {
-    width: percentage( $i / $columns );
+    width: math.percentage(calc($i / $columns));
   }
 }
 
 @for $i from 0 through $columns {
   .push-#{$i} {
-    margin-left: percentage( $i / $columns );
+    margin-left: math.percentage(calc($i / $columns));
   }
 }
 
 @for $i from 0 through $columns {
   .pull-#{$i} {
-    margin-right: percentage( $i / $columns );
+    margin-right: math.percentage(calc($i / $columns));
   }
 }
 
@@ -93,19 +96,19 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
 
     @for $i from 0 through $columns {
       .col-w-#{$i} {
-        width: percentage( $i / $columns );
+        width: math.percentage(calc($i / $columns));
       }
     }
 
     @for $i from 0 through $columns {
       .push-w-#{$i} {
-        margin-left: percentage( $i / $columns );
+        margin-left: math.percentage( calc($i / $columns) );
       }
     }
 
     @for $i from 0 through $columns {
       .pull-w-#{$i} {
-        margin-right: percentage( $i / $columns );
+        margin-right: math.percentage( calc($i / $columns) );
       }
     }
   }
@@ -115,19 +118,19 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
 
     @for $i from 0 through $columns {
       .col-d-#{$i} {
-        width: percentage( $i / $columns );
+        width: math.percentage( calc($i / $columns) );
       }
     }
 
     @for $i from 0 through $columns {
       .push-d-#{$i} {
-        margin-left: percentage( $i / $columns );
+        margin-left: math.percentage( calc($i / $columns) );
       }
     }
 
     @for $i from 0 through $columns {
       .pull-d-#{$i} {
-        margin-right: percentage( $i / $columns );
+        margin-right: math.percentage( calc($i / $columns) );
       }
     }
   }
@@ -138,19 +141,19 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
 
     @for $i from 0 through $columns {
       .col-t-#{$i} {
-        width: percentage( $i / $columns );
+        width: math.percentage( calc($i / $columns) );
       }
     }
 
     @for $i from 0 through $columns {
       .push-t-#{$i} {
-        margin-left: percentage( $i / $columns );
+        margin-left: math.percentage( calc($i / $columns) );
       }
     }
 
     @for $i from 0 through $columns {
       .pull-t-#{$i} {
-        margin-right: percentage( $i / $columns );
+        margin-right: math.percentage( calc($i / $columns) );
       }
     }
   }
@@ -160,19 +163,19 @@ $mq: ( $mobile:$columns, $tablet:$columns, $desktop:$columns );
 
     @for $i from 0 through $columns {
       .col-m-#{$i} {
-        width: percentage( $i / $columns );
+        width: math.percentage(calc($i / $columns));
       }
     }
 
     @for $i from 0 through $columns {
       .push-m-#{$i} {
-        margin-left: percentage( $i / $columns );
+        margin-left: math.percentage(calc($i / $columns));
       }
     }
 
     @for $i from 0 through $columns {
       .pull-m-#{$i} {
-        margin-right: percentage( $i / $columns );
+        margin-right: math.percentage(calc($i / $columns));
       }
     }
   }
