--- a/_sass/3-modules/_section-tags.scss
+++ b/_sass/3-modules/_section-tags.scss
@@ -1,6 +1,8 @@
+@use "../1-tools/grid";
+
 /* Section Tags */
 .section-tags {
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     .row .col:last-child > .tag-image {
       margin-bottom: 0;
     }
