--- a/_sass/1-tools/_shared.scss
+++ b/_sass/1-tools/_shared.scss
@@ -1,3 +1,5 @@
+@use "../0-settings/variables";
+
 /**
  * Shared declarations for certain elements.
  */
@@ -19,7 +21,7 @@ pre {
 
 ul, ol,
 dd {
-  margin-left: $base-spacing-unit;
+  margin-left: variables.$base-spacing-unit;
 }
 
 ul, ol {
