--- a/_sass/3-modules/_article.scss
+++ b/_sass/3-modules/_article.scss
@@ -1,3 +1,6 @@
+@use "../0-settings/variables";
+@use "../1-tools/grid";
+
 /* Article */
 .article {
   position: relative;
@@ -42,7 +45,7 @@
       margin-bottom: 32px;
     }
 
-    @media only screen and (max-width: $wide) {
+    @media only screen and (max-width: grid.$wide) {
       .article__content {
          .article__title {
            font-size: 42px;
@@ -50,7 +53,7 @@
       }
     }
 
-    @media only screen and (max-width: $desktop) {
+    @media only screen and (max-width: grid.$desktop) {
       .article__head {
         width: 100%;
         padding-right: 0;
@@ -78,7 +81,7 @@
       }
     }
 
-    @media only screen and (max-width: $tablet) {
+    @media only screen and (max-width: grid.$tablet) {
       .article__content {
          .article__title {
            font-size: 26px;
@@ -151,7 +154,7 @@
   box-shadow: 0px 100px 80px rgba(0, 0, 0, 0.07), 0px 41.7776px 33.4221px rgba(0, 0, 0, 0.0503198), 0px 22.3363px 17.869px rgba(0, 0, 0, 0.0417275);
   overflow: hidden;
   pointer-events: none;
-  transition: $global-transition;
+  transition: variables.$global-transition;
 
   svg {
     width: 68px;
@@ -263,7 +266,7 @@
 .article__author__name {
   display: inline-block;
   margin-bottom: 6px;
-  font-family: $heading-font-family;
+  font-family: variables.$heading-font-family;
   font-size: 14px;
   font-weight: 700;
   line-height: 1.2;
