--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -1,3 +1,6 @@
+@use "../0-settings/variables";
+@use "../1-tools/grid";
+
 /* Footer */
 .footer__inner {
   padding: 80px 0;
@@ -15,7 +18,7 @@
     }
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     .row .col {
       &:last-child>.widget-footer {
         margin-bottom: 0;
@@ -23,24 +26,24 @@
     }
   }
 
-   @media only screen and (max-width: $mobile) {
+   @media only screen and (max-width: grid.$mobile) {
      padding: 60px 0;
    }
 }
 
 .widget-footer {
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     margin-bottom: 60px;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 44px;
   }
 }
 
 /* Widget Info */
 .widget-info__title {
-  font-family: $base-font-family;
+  font-family: variables.$base-font-family;
   font-size: 32px;
   line-height: 1;
   font-weight: 700;
@@ -51,7 +54,7 @@
   max-width: 380px;
   color: var(--text-alt-color);
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     max-width: 100%;
     margin-bottom: 24px;
   }
@@ -106,7 +109,7 @@
     margin-bottom: 0;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     flex-direction: column;
     margin-bottom: 32px;
   }
@@ -132,7 +135,7 @@
     object-fit: cover;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     min-width: 100%;
     margin-right: 0;
     margin-bottom: 20px;
@@ -178,7 +181,7 @@
     height: 40px;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     .recent-posts__title {
       margin: 12px 0 16px;
       font-size: 26px;
@@ -195,7 +198,7 @@
 .widget-nav {
   text-align: right;
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     text-align: left;
   }
 }
