--- a/_sass/3-modules/_gallery.scss
+++ b/_sass/3-modules/_gallery.scss
@@ -1,12 +1,14 @@
+@use "../1-tools/grid";
+
 /* Gallery */
 .gallery-box {
   margin: 32px -100px 32px -100px;
 
-  @media only screen and (max-width: $wide) {
+  @media only screen and (max-width: grid.$wide) {
     margin: 32px -40px 32px -40px;
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     margin: 32px 0;
   }
 }
@@ -40,7 +42,7 @@
     }
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     margin-left: -12px;
     margin-bottom: -12px;
 
