--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -1,3 +1,6 @@
+@use "../0-settings/variables";
+@use "../1-tools/grid";
+
 /* Header */
 .header {
   .header__inner {
@@ -6,10 +9,10 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 40px $base-spacing-unit;
+    padding: 40px variables.$base-spacing-unit;
 
-    @media only screen and (max-width: $mobile) {
-      padding: 32px $base-spacing-unit;
+    @media only screen and (max-width: grid.$mobile) {
+      padding: 32px variables.$base-spacing-unit;
     }
   }
 }
@@ -38,10 +41,10 @@
   flex: 1 0;
   align-items: center;
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     position: absolute;
     top: 88px;
-    right: $base-spacing-unit;
+    right: variables.$base-spacing-unit;
     z-index: -1;
     display: block;
     min-width: 160px;
@@ -117,7 +120,7 @@
   align-items: center;
   margin-left: auto;
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     display: block;
   }
 }
@@ -236,7 +239,7 @@
     .dropdown-menu {
       background-color: var(--background-alt-color);
     }
-    @media only screen and (max-width: $desktop) {
+    @media only screen and (max-width: grid.$desktop) {
       background-color: var(--background-alt-color);
     }
   }
@@ -249,7 +252,7 @@
   display: none;
   cursor: pointer;
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     display: flex;
     align-items: center;
   }
@@ -307,7 +310,7 @@
     }
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     display: flex;
     justify-content: end;
   }
@@ -325,7 +328,7 @@
   user-select: none;
   cursor: pointer;
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     margin-right: 10px;
   }
 }
