--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -1,14 +1,16 @@
+@use "../1-tools/grid";
+
 /* Hero */
 .hero {
   padding: 60px 0;
   margin-bottom: 40px;
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     padding: 40px 0;
     margin-bottom: 32px;
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     padding: 32px 0;
   }
 }
@@ -24,15 +26,15 @@
   font-size: 60px;
   color: var(--heading-font-color);
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     font-size: 50px;
   }
 
-  @media only screen and (max-width: $tablet) {
+  @media only screen and (max-width: grid.$tablet) {
     font-size: 40px;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     font-size: 32px;
   }
 }
@@ -43,7 +45,7 @@
   font-size: 21px;
   color: var(--text-alt-color);
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     font-size: inherit;
   }
 }
