--- a/_sass/4-layouts/_authors.scss
+++ b/_sass/4-layouts/_authors.scss
@@ -1,3 +1,5 @@
+@use "../1-tools/grid";
+
 /* Author + Authors */
 
 // Authors Page
@@ -72,7 +74,7 @@
     margin: 0 auto;
   }
 
-  @media only screen and (max-width: $tablet) {
+  @media only screen and (max-width: grid.$tablet) {
     .authors__title {
       font-size: 40px;
     }
@@ -82,7 +84,7 @@
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 60px;
 
     .authors__head {
@@ -191,7 +193,7 @@
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 60px;
 
     .author__content {
