--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -1,10 +1,13 @@
+@use "../0-settings/variables";
+@use "../1-tools/grid";
+
 /* Post + Page */
 .post-head,
 .page-head {
   max-width: 780px;
   margin: 60px auto 32px;
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin: 32px auto;
   }
 }
@@ -17,7 +20,7 @@
     margin: 0 auto;
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     margin-left: 0;
   }
 }
@@ -56,7 +59,7 @@
   margin-bottom: 24px;
   font-size: 46px;
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 20px;
     font-size: 32px;
   }
@@ -104,7 +107,7 @@
   .post__author__name {
     display: inline-block;
     margin-bottom: 6px;
-    font-family: $heading-font-family;
+    font-family: variables.$heading-font-family;
     font-size: 14px;
     font-weight: 700;
     line-height: 1.2;
@@ -146,12 +149,12 @@
     user-select: none;
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     padding-top: 75%;
     margin-bottom: 40px;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 32px;
   }
 }
@@ -180,7 +183,7 @@
     }
   }
 
-  @media only screen and (max-width: $desktop) {
+  @media only screen and (max-width: grid.$desktop) {
     margin-bottom: 40px;
 
     .post-video__wrap,
@@ -189,7 +192,7 @@
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 32px;
   }
 }
@@ -254,7 +257,7 @@
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     font-size: inherit;
   }
 }
@@ -262,7 +265,7 @@
 .page {
   margin: 0 auto 100px;
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin: 0 auto 80px;
   }
 }
@@ -272,7 +275,7 @@
 
   .share__title {
     margin-bottom: 20px;
-    font-family: $heading-font-family;
+    font-family: variables.$heading-font-family;
     color: var(--heading-font-color);
     font-size: 18px;
     line-height: 1.3;
@@ -334,7 +337,7 @@
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-top: 0;
   }
 }
@@ -396,7 +399,7 @@
     color: var(--text-alt-color);
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     flex-direction: column;
     padding: 24px;
 
@@ -455,7 +458,7 @@
     margin-bottom: 16px;
   }
 
-  @media only screen and (max-width: $tablet) {
+  @media only screen and (max-width: grid.$tablet) {
     .article__inner {
       display: block;
     }
@@ -479,7 +482,7 @@
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
      margin: 60px auto 0;
   }
 }
@@ -492,7 +495,7 @@
 .disqus-button {
   margin: 100px 0;
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin: 80px 0;
   }
 }
@@ -505,7 +508,7 @@
     margin: 100px auto;
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
      &.is-open {
        margin: 80px auto;
      }
@@ -526,7 +529,7 @@
     color: var(--text-alt-color);
   }
   
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     .error__title {
       font-size: 100px;
     }
