--- a/_sass/4-layouts/_tags-page.scss
+++ b/_sass/4-layouts/_tags-page.scss
@@ -1,3 +1,5 @@
+@use "../1-tools/grid";
+
 /* Tags */
 .tags__inner {
   margin-bottom: 68px;
@@ -10,11 +12,11 @@
     padding: 60px 0;
     text-align: center;
 
-    @media only screen and (max-width: $desktop) {
+    @media only screen and (max-width: grid.$desktop) {
       padding: 40px 0;
     }
 
-    @media only screen and (max-width: $mobile) {
+    @media only screen and (max-width: grid.$mobile) {
       padding: 32px 0;
     }
   }
@@ -35,14 +37,14 @@
     text-transform: uppercase;
   }
 
-  @media only screen and (max-width: $tablet) {
+  @media only screen and (max-width: grid.$tablet) {
     .tag__name {
       margin-bottom: 16px;
       font-size: 40px;
     }
   }
 
-  @media only screen and (max-width: $mobile) {
+  @media only screen and (max-width: grid.$mobile) {
     margin-bottom: 48px;
 
     .tag__name {
