Add sitemap config and seo plugin

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -5,7 +5,7 @@
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 :: Template name: Mria
 ::
-:: Template Author: Artem Sheludko
+:: Template Author: Myratune
 :: Version: 1.0
 <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 
