--- a/_includes/search.html
+++ b/_includes/search.html
@@ -9,7 +9,7 @@
               <i class="ion ion-md-close"></i>
             </div>
             <label for="js-search-input" class="screen-reader-text">Search for Blog</label>
-            <input type="text" id="js-search-input" class="search__text" autocomplete="off" placeholder="Type to search...">
+            <input type="text" id="js-search-input" class="search__text" autocomplete="off" placeholder="Commencez à taper pour rechercher...">
           </div>
           <div class="search-results-list" id="js-results-container"></div>
         </div>
