--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col col-12">
         <div class="container__inner">
-          <h2 class="related-posts__title">You may also like...</h2>
+          <h2 class="related-posts__title">Plus d'articles</h2>
           <div class="row">
 
           {% for post in site.posts %}
