--- a/_includes/section-tag.html
+++ b/_includes/section-tag.html
@@ -11,7 +11,7 @@
           <div class="section__info">
             <div class="section__head">
               <h2 class="section__title">{{ site.data.settings.tag__settings.tag | capitalize }}</h2>
-              <a class="section__link" href="{{ site.baseurl }}/tags/?tag={{ site.data.settings.tag__settings.tag | downcase }}">Plus de news<i class="ion ion-md-arrow-forward"></i></a>
+              <a class="section__link" href="{{ site.baseurl }}/tags/?tag={{ site.data.settings.tag__settings.tag | downcase }}">Plus d'articles<i class="ion ion-md-arrow-forward"></i></a>
             </div>
           </div>
 
