Add Buymeacoffe widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
 
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
   <script src="{{ site.baseurl }}/js/common.js"></script>
+  {% include buymeacoffee-widget.html %}
 </body>
 
 </html>
